cabal-version: 2.2
name:          hx-utils
version:       0.1.0.0
build-type:    Simple

executable hx-utils
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  default-extensions: LambdaCase
  build-depends:
    , base                  >=4.7      && <5
    , casing                >=0.1.4.1  && <2
    , optparse-applicative  >=0.18.1.0 && <2
    , text                  >=2.0.2    && <3

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
